# pytorch-cpp-inference

./: .gitignore  README.md
docker/: Dockerfile
docker/cpu/: Dockerfile
docker/cuda10/: Dockerfile
inference-cpp/cnn-classification/: CMakeLists.txt  build.sh  infer.cc  infer.h  main.cc  predict
inference-cpp/cnn-classification/server/: CMakeLists.txt  base64.cc  base64.h  build.sh  crow_all.h  main.cc  test_api.py
models/resnet/: resnet.py
utils/: opencvutils.cc  opencvutils.h  torchutils.cc  torchutils.h
